ENH: new ImageFunction classes for interpolating vector images

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -43,6 +43,7 @@ ADD_TEST(itkVectorGeometryTest itkVectorGeometryTest)
 ADD_TEST(itkVersorTest itkVersorTest)
 ADD_TEST(itkVersorRigid3DTransformTest itkVersorRigid3DTransformTest)
 ADD_TEST(itkVectorTest itkVectorTest)
+ADD_TEST(itkVectorInterpolateImageFunctionTest itkVectorInterpolateImageFunctionTest)
 ADD_TEST(itkScaleTransformTest itkScaleTransformTest)
 ADD_TEST(itkSplineKernelTransformTest itkSplineKernelTransformTest)
 ADD_TEST(itkEllipsoidInteriorExteriorSpatialFunctionTest itkEllipsoidInteriorExteriorSpatialFunctionTest)
@@ -93,5 +94,6 @@ ADD_EXECUTABLE(itkVectorGeometryTest itkVectorGeometryTest)
 ADD_EXECUTABLE(itkVersorTest itkVersorTest)
 ADD_EXECUTABLE(itkVersorRigid3DTransformTest itkVersorRigid3DTransformTest)
 ADD_EXECUTABLE(itkVectorTest itkVectorTest)
+ADD_EXECUTABLE(itkVectorInterpolateImageFunctionTest itkVectorInterpolateImageFunctionTest)
 ADD_EXECUTABLE(itkEllipsoidInteriorExteriorSpatialFunctionTest itkEllipsoidInteriorExteriorSpatialFunctionTest)
 ADD_EXECUTABLE(itkSymmetricEllipsoidInteriorExteriorSpatialFunctionTest itkSymmetricEllipsoidInteriorExteriorSpatialFunctionTest)
