FIX: Renaming basic filters

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -28,7 +28,6 @@ ADD_TEST(itkExpImageFilterAndAdaptorTest itkExpImageFilterAndAdaptorTest)
 ADD_TEST(itkEigenAnalysis2DImageFilterTest itkEigenAnalysis2DImageFilterTest)
 ADD_TEST(itkFilterDispatchTest itkFilterDispatchTest)
 ADD_TEST(itkAddImageFilterTest itkAddImageFilterTest)
-ADD_TEST(itkAdd2ImageFilterTest itkAdd2ImageFilterTest)
 ADD_TEST(itkFloodFillIteratorTest itkFloodFillIteratorTest)
 ADD_TEST(itkBasicFiltersHeaderTest itkBasicFiltersHeaderTest)
 ADD_TEST(itkImageAdaptorNthElementTest itkImageAdaptorNthElementTest)
@@ -55,6 +54,7 @@ ADD_TEST(itkGradientAnisotropicDiffusionImageFilterTest itkGradientAnisotropicDi
 ADD_TEST(itkGradientMagnitudeImageFilterTest itkGradientMagnitudeImageFilterTest)
 ADD_TEST(itkGradientRecursiveGaussianFilterTest itkGradientRecursiveGaussianFilterTest)
 ADD_TEST(itkNeighborhoodOperatorImageFilterTest itkNeighborhoodOperatorImageFilterTest)
+ADD_TEST(itkNaryAddImageFilterTest itkNaryAddImageFilterTest)
 ADD_TEST(itkDerivativeImageFilterTest itkDerivativeImageFilterTest)
 ADD_TEST(itkDiscreteGaussianImageFilterTest itkDiscreteGaussianImageFilterTest)
 
@@ -74,7 +74,6 @@ ADD_EXECUTABLE(itkExpImageFilterAndAdaptorTest itkExpImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkEigenAnalysis2DImageFilterTest itkEigenAnalysis2DImageFilterTest)
 ADD_EXECUTABLE(itkFilterDispatchTest itkFilterDispatchTest)
 ADD_EXECUTABLE(itkAddImageFilterTest itkAddImageFilterTest)
-ADD_EXECUTABLE(itkAdd2ImageFilterTest itkAdd2ImageFilterTest)
 ADD_EXECUTABLE(itkFloodFillIteratorTest itkFloodFillIteratorTest)
 ADD_EXECUTABLE(itkBasicFiltersHeaderTest itkBasicFiltersHeaderTest)
 ADD_EXECUTABLE(itkImageAdaptorNthElementTest itkImageAdaptorNthElementTest)
@@ -101,6 +100,7 @@ ADD_EXECUTABLE(itkGradientAnisotropicDiffusionImageFilterTest itkGradientAnisotr
 ADD_EXECUTABLE(itkGradientMagnitudeImageFilterTest itkGradientMagnitudeImageFilterTest)
 ADD_EXECUTABLE(itkGradientRecursiveGaussianFilterTest itkGradientRecursiveGaussianFilterTest)
 ADD_EXECUTABLE(itkNeighborhoodOperatorImageFilterTest itkNeighborhoodOperatorImageFilterTest)
+ADD_EXECUTABLE(itkNaryAddImageFilterTest itkNaryAddImageFilterTest)
 ADD_EXECUTABLE(itkDerivativeImageFilterTest itkDerivativeImageFilterTest)
 ADD_EXECUTABLE(itkDiscreteGaussianImageFilterTest itkDiscreteGaussianImageFilterTest)
 
