ENH: Added more wrappers to ITKCommonTcl and added ITKBasicFiltersTcl and ITKAlgorithmsTcl libraries.  Improved package configuration for pkgIndex.tcl.  Updated ITKTclUtils to use new wrapper syntax now that object table is gone and objects don't have names.

--- a/Wrapping/Tcl/Common/CMakeLists.txt
+++ b/Wrapping/Tcl/Common/CMakeLists.txt
@@ -1,3 +1,8 @@
+CABLE_CLASS_SET(Scalar float)
+CABLE_CLASS_SET(Dimension 2)
+CABLE_CLASS_SET(Image "itk::Image<$Scalar,$Dimension>")
+CABLE_CLASS_SET(Container "itk::ValarrayImageContainer<unsigned long, $Scalar>")
+
 ADD_LIBRARY(ITKCommonTcl SHARED)
 CABLE_CLASS_SET(ItkCommonBase
   itk::Command
@@ -18,6 +23,17 @@ CABLE_WRAP_TCL(ITKCommonTcl
   itk::Region
   itk::TimeStamp
   "itkSmartPointer_:itk::SmartPointer<$ItkCommonBase >"
+
+  itk::ImageBase<$Dimension>
+  itk::Size<$Dimension>
+  itk::Index<$Dimension>
+  itk::ImageRegion<$Dimension>
+  $Image
+  $Container
+  "itk::ImageSource<$Image >"
+  "itk::ImageToImageFilter<$Image, $Image >"
+  "itkSmartPointer_:itk::SmartPointer<$Image >"
+  "itkSmartPointer_:itk::SmartPointer<$Container >"
 )
 
 LINK_LIBRARIES(
@@ -26,4 +42,3 @@ VXLNumerics
 ${CABLE_TCL_LIBRARY}
 ${TCL_LIBRARY}
 )
-
