--- a/Wrapping/Tcl/pkgIndex.tcl.in
+++ b/Wrapping/Tcl/pkgIndex.tcl.in
@@ -1,55 +1,45 @@
 # ITK Tcl package configuration.
+#
 # This file is moved by a CMake CONFIGURE_FILE command into a file in the
 # build directory called "pkgIndex.tcl".
+#
+# If you edit this file, do not use the syntax "${var}" to refer to
+# a Tcl variable, only to CMake variables.  CMake will replace any such
+# construct with the value of the named CMake variable, or with the empty
+# string if the names don't match.
 
-# If you edit this file, do not use the ${var} access code to refer to
-# a variable.  CMake will replace any such construct with an empty
-# string, or with a random, unintended substitution if variable names
-# happen to match.
-
-package ifneeded ItkTclUtils 1.0 {
-  set utilsDir "${ITK_TCL_UTILS_DIR}"
-  set tclFile [file join $utilsDir "itkTclUtils.tcl"]
+#
+# Configure the standard ITK Tcl utilities package.
+#
+package ifneeded ITKTclUtils 1.0 {
+  set tclFile [file join "${ITK_TCL_UTILS_DIR}" "itkTclUtils.tcl"]
   if {[catch { source $tclFile } errorMessage ]} {
     puts $errorMessage
   } else {
-    package provide ItkTclUtils 1.0
+    package provide ITKTclUtils 1.0
   }
 }
 
-proc itkFindTclPackages {libPath} {
-  global tcl_platform
-  if {$tcl_platform(platform) == "unix"} {
-    set libPrefix "lib"
-  } else {
-    set libPrefix ""
-  }
-
-  set libPath [file join $libPath "${ITK_MSDEV_CONFIG_DIR}"]
-
+#
+# This procedure will help configure other ITK Tcl packages.
+# Call it with:
+#   package = the name of the package
+#   version = the version number of the package
+#   subdir  = the subdirectory under Wrapping/Tcl where the package is built
+#
+proc itkConfigureTclPackage {package version subdir} {
+  set libPrefix "${ITK_LIBNAME_PREFIX}"
+  set libPath [file join "${ITK_WRAP_TCL_DIR}" "${ITK_MSDEV_CONFIG_DIR}"]
+  set libName $package
   set libExt [info sharedlibextension]
-  set libPattern [file join $libPath $libPrefix*Tcl$libExt]
-  set libRegex [file join $libPath $libPrefix\(.*\)$libExt]
+  set libFile [file join $libPath "$libPrefix$libName$libExt"]
 
-  set packageList {}
-  catch {
-    foreach lib [glob $libPattern] {
-      if {[regexp $libRegex $lib libFile libName]} {
-        package ifneeded $libName 1.0 "
-          if {[catch { load $libFile } errorMessage]} { puts \$errorMessage }
-        "
-        lappend packageList $libName
-      }
-    }
-  }
-  return $packageList
+  package ifneeded $package $version "
+    if {\[catch { load $libFile } errorMessage \]} { puts \$errorMessage }
+  "
 }
 
-itkFindTclPackages "${ITK_WRAP_TCL_DIR}"
-
-set subDirs [list ${ITK_WRAP_TCL_SUBDIRS}]
-if {[llength $subDirs] > 0} {
-  foreach subDir $subDirs {
-    itkFindTclPackages [file join ${ITK_WRAP_TCL_DIR} $subDir]
-  }
-}
+# Configure ITK Tcl packages.
+itkConfigureTclPackage ITKCommonTcl       1.0 Common
+itkConfigureTclPackage ITKBasicFiltersTcl 1.0 BasicFilters
+itkConfigureTclPackage ITKAlgorithmsTcl   1.0 Algorithms
