ENH: added new filter VectorExpandImageFilter that expand vector images by interpolation.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -27,6 +27,7 @@ ADD_TEST(itkDifferenceOfGaussiansGradientTest itkDifferenceOfGaussiansGradientTe
 ADD_TEST(itkEigenAnalysis2DImageFilterTest itkEigenAnalysis2DImageFilterTest)
 ADD_TEST(itkExpImageFilterAndAdaptorTest itkExpImageFilterAndAdaptorTest)
 ADD_TEST(itkExpandImageFilterTest itkExpandImageFilterTest)
+ADD_TEST(itkVectorExpandImageFilterTest itkVectorExpandImageFilterTest)
 ADD_TEST(itkFilterDispatchTest itkFilterDispatchTest)
 ADD_TEST(itkAddImageFilterTest itkAddImageFilterTest)
 ADD_TEST(itkFloodFillIteratorTest itkFloodFillIteratorTest)
@@ -74,6 +75,7 @@ ADD_EXECUTABLE(itkDifferenceOfGaussiansGradientTest itkDifferenceOfGaussiansGrad
 ADD_EXECUTABLE(itkEigenAnalysis2DImageFilterTest itkEigenAnalysis2DImageFilterTest)
 ADD_EXECUTABLE(itkExpImageFilterAndAdaptorTest itkExpImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkExpandImageFilterTest itkExpandImageFilterTest)
+ADD_EXECUTABLE(itkVectorExpandImageFilterTest itkVectorExpandImageFilterTest)
 ADD_EXECUTABLE(itkFilterDispatchTest itkFilterDispatchTest)
 ADD_EXECUTABLE(itkAddImageFilterTest itkAddImageFilterTest)
 ADD_EXECUTABLE(itkFloodFillIteratorTest itkFloodFillIteratorTest)
