ENH: added WarpImageFilter which warps an image according to input deformation field.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -59,6 +59,7 @@ ADD_TEST(itkNeighborhoodOperatorImageFilterTest itkNeighborhoodOperatorImageFilt
 ADD_TEST(itkNaryAddImageFilterTest itkNaryAddImageFilterTest)
 ADD_TEST(itkDerivativeImageFilterTest itkDerivativeImageFilterTest)
 ADD_TEST(itkDiscreteGaussianImageFilterTest itkDiscreteGaussianImageFilterTest)
+ADD_TEST(itkWarpImageFilterTest itkWarpImageFilterTest)
 
 ADD_EXECUTABLE(itkAsinImageFilterAndAdaptorTest itkAsinImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkAcosImageFilterAndAdaptorTest itkAcosImageFilterAndAdaptorTest)
@@ -107,6 +108,7 @@ ADD_EXECUTABLE(itkNeighborhoodOperatorImageFilterTest itkNeighborhoodOperatorIma
 ADD_EXECUTABLE(itkNaryAddImageFilterTest itkNaryAddImageFilterTest)
 ADD_EXECUTABLE(itkDerivativeImageFilterTest itkDerivativeImageFilterTest)
 ADD_EXECUTABLE(itkDiscreteGaussianImageFilterTest itkDiscreteGaussianImageFilterTest)
+ADD_EXECUTABLE(itkWarpImageFilterTest itkWarpImageFilterTest)
 
 
 FIND_PATH(VW_RAW_DATA_PATH
