ENH: added test for VectorNeighborhoodOperatorImageFilter.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -56,6 +56,7 @@ ADD_TEST(itkGradientAnisotropicDiffusionImageFilterTest itkGradientAnisotropicDi
 ADD_TEST(itkGradientMagnitudeImageFilterTest itkGradientMagnitudeImageFilterTest)
 ADD_TEST(itkGradientRecursiveGaussianFilterTest itkGradientRecursiveGaussianFilterTest)
 ADD_TEST(itkNeighborhoodOperatorImageFilterTest itkNeighborhoodOperatorImageFilterTest)
+ADD_TEST(itkVectorNeighborhoodOperatorImageFilterTest itkVectorNeighborhoodOperatorImageFilterTest)
 ADD_TEST(itkNaryAddImageFilterTest itkNaryAddImageFilterTest)
 ADD_TEST(itkDerivativeImageFilterTest itkDerivativeImageFilterTest)
 ADD_TEST(itkDiscreteGaussianImageFilterTest itkDiscreteGaussianImageFilterTest)
@@ -105,6 +106,7 @@ ADD_EXECUTABLE(itkGradientAnisotropicDiffusionImageFilterTest itkGradientAnisotr
 ADD_EXECUTABLE(itkGradientMagnitudeImageFilterTest itkGradientMagnitudeImageFilterTest)
 ADD_EXECUTABLE(itkGradientRecursiveGaussianFilterTest itkGradientRecursiveGaussianFilterTest)
 ADD_EXECUTABLE(itkNeighborhoodOperatorImageFilterTest itkNeighborhoodOperatorImageFilterTest)
+ADD_EXECUTABLE(itkVectorNeighborhoodOperatorImageFilterTest itkVectorNeighborhoodOperatorImageFilterTest)
 ADD_EXECUTABLE(itkNaryAddImageFilterTest itkNaryAddImageFilterTest)
 ADD_EXECUTABLE(itkDerivativeImageFilterTest itkDerivativeImageFilterTest)
 ADD_EXECUTABLE(itkDiscreteGaussianImageFilterTest itkDiscreteGaussianImageFilterTest)
