ENH: Test for MultiplyImageFilter was added

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -37,6 +37,7 @@ ADD_TEST(itkImageAdaptorPipeLineTest itkImageAdaptorPipeLineTest)
 ADD_TEST(itkImportImageTest itkImportImageTest)
 ADD_TEST(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_TEST(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
+ADD_TEST(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_TEST(itkResampleImageTest itkResampleImageTest)
 ADD_TEST(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest)
 ADD_TEST(itkShrinkImageTest itkShrinkImageTest)
@@ -87,6 +88,7 @@ ADD_EXECUTABLE(itkImageAdaptorPipeLineTest itkImageAdaptorPipeLineTest)
 ADD_EXECUTABLE(itkImportImageTest itkImportImageTest)
 ADD_EXECUTABLE(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
+ADD_EXECUTABLE(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_EXECUTABLE(itkResampleImageTest itkResampleImageTest )
 ADD_EXECUTABLE(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest )
 ADD_EXECUTABLE(itkShrinkImageTest itkShrinkImageTest)
