--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -36,6 +36,7 @@ ADD_TEST(itkLevelSet2DEquationTest itkLevelSet2DEquationTest)
 ADD_TEST(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
 ADD_TEST(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
 ADD_TEST(itkMRFLabellerTest itkMRFLabellerTest)
+ADD_TEST(itkMultiResolutionImagePyramidTest itkMultiResolutionImagePyramidTest)
 ADD_TEST(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 ADD_TEST(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_TEST(itkMutualInformationMetricTest itkMutualInformationMetricTest)
@@ -86,6 +87,7 @@ ADD_EXECUTABLE(itkLevelSet2DEquationTest itkLevelSet2DEquationTest)
 ADD_EXECUTABLE(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
 ADD_EXECUTABLE(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
 ADD_EXECUTABLE(itkMRFLabellerTest itkMRFLabellerTest)
+ADD_EXECUTABLE(itkMultiResolutionImagePyramidTest itkMultiResolutionImagePyramidTest)
 ADD_EXECUTABLE(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 ADD_EXECUTABLE(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_EXECUTABLE(itkMutualInformationMetricTest itkMutualInformationMetricTest)
