--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -15,6 +15,7 @@ ITKCommon
 ADD_TEST(itkAsinImageFilterAndAdaptorTest itkAsinImageFilterAndAdaptorTest)
 ADD_TEST(itkAcosImageFilterAndAdaptorTest itkAcosImageFilterAndAdaptorTest)
 ADD_TEST(itkAtanImageFilterAndAdaptorTest itkAtanImageFilterAndAdaptorTest)
+ADD_TEST(itkAdaptImageFilterTest itkAdaptImageFilterTest)
 ADD_TEST(itkBasicArchitectureTest itkBasicArchitectureTest)
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBinaryMagnitudeImageFilterTest)
 ADD_TEST(itkBloxBoundaryPointImageTest itkBloxBoundaryPointImageTest)
@@ -67,6 +68,7 @@ ADD_TEST(itkWarpImageFilterTest itkWarpImageFilterTest)
 ADD_EXECUTABLE(itkAsinImageFilterAndAdaptorTest itkAsinImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkAcosImageFilterAndAdaptorTest itkAcosImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkAtanImageFilterAndAdaptorTest itkAtanImageFilterAndAdaptorTest)
+ADD_EXECUTABLE(itkAdaptImageFilterTest itkAdaptImageFilterTest)
 ADD_EXECUTABLE(itkBasicArchitectureTest itkBasicArchitectureTest)
 ADD_EXECUTABLE(itkBinaryMagnitudeImageFilterTest itkBinaryMagnitudeImageFilterTest)
 ADD_EXECUTABLE(itkBloxBoundaryPointImageTest itkBloxBoundaryPointImageTest)
