--- a/Wrapping/Tcl/Algorithms/CMakeLists.txt
+++ b/Wrapping/Tcl/Algorithms/CMakeLists.txt
@@ -3,14 +3,14 @@ INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Code/Algorithms)
 
 ADD_LIBRARY(ITKAlgorithmsTcl SHARED)
 CABLE_CLASS_SET(Scalar float)
-CABLE_CLASS_SET(Dimension 2)
+CABLE_CLASS_SET(Dimension 2 3)
 CABLE_CLASS_SET(Image "itk::Image<$Scalar,$Dimension>")
-#CABLE_CLASS_SET(Filter "itk::CurvatureFlowImageFilter<$Image >")
+CABLE_CLASS_SET(Filter "itk::CurvatureFlowImageFilter<$Image, $Image >")
 
 CABLE_WRAP_TCL(ITKAlgorithmsTcl
-#  $Filter
+  $Filter
   "itk::LevelSetImageFilter<$Image >"
-#  "itkSmartPointer_:itk::SmartPointer<$Filter >"
+  "itkSmartPointer_:itk::SmartPointer<$Filter >"
 )
 
 LINK_LIBRARIES(
