--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -12,6 +12,7 @@ ADD_TEST(itkConstSmartNeighborhoodIteratorTest itkConstSmartNeighborhoodIterator
 ADD_TEST(itkConstRandomAccessNeighborhoodIteratorTest itkConstRandomAccessNeighborhoodIteratorTest)
 ADD_TEST(itkCovariantVectorGeometryTest itkCovariantVectorGeometryTest)
 ADD_TEST(itkDataTypeTest itkDataTypeTest)
+ADD_TEST(itkDynamicMeshTest itkDynamicMeshTest)
 ADD_TEST(itkExceptionObjectTest itkExceptionObjectTest)
 ADD_TEST(itkCommonHeaderTest itkCommonHeaderTest)
 ADD_TEST(itkHashTableTest itkHashTableTest)
@@ -60,6 +61,7 @@ ADD_EXECUTABLE(itkConstRandomAccessNeighborhoodIteratorTest itkConstRandomAccess
 ADD_EXECUTABLE(itkConstSmartNeighborhoodIteratorTest itkConstSmartNeighborhoodIteratorTest)
 ADD_EXECUTABLE(itkCovariantVectorGeometryTest itkCovariantVectorGeometryTest)
 ADD_EXECUTABLE(itkDataTypeTest itkDataTypeTest)
+ADD_EXECUTABLE(itkDynamicMeshTest itkDynamicMeshTest)
 ADD_EXECUTABLE(itkExceptionObjectTest itkExceptionObjectTest)
 ADD_EXECUTABLE(itkCommonHeaderTest itkCommonHeaderTest)
 ADD_EXECUTABLE(itkHashTableTest itkHashTableTest)
