ENH: Added MirrorPadFilterTest.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -44,6 +44,7 @@ ADD_TEST(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTe
 ADD_TEST(itkShrinkImageTest itkShrinkImageTest)
 ADD_TEST(itkConstantPadImageTest itkConstantPadImageTest)
 ADD_TEST(itkWrapPadImageTest itkWrapPadImageTest)
+ADD_TEST(itkMirrorPadImageTest itkMirrorPadImageTest)
 ADD_TEST(itkExtractImageTest itkExtractImageTest)
 ADD_TEST(itkSinImageFilterAndAdaptorTest itkSinImageFilterAndAdaptorTest)
 ADD_TEST(itkSqrtImageFilterAndAdaptorTest itkSqrtImageFilterAndAdaptorTest)
@@ -97,6 +98,7 @@ ADD_EXECUTABLE(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFil
 ADD_EXECUTABLE(itkShrinkImageTest itkShrinkImageTest)
 ADD_EXECUTABLE(itkConstantPadImageTest itkConstantPadImageTest)
 ADD_EXECUTABLE(itkWrapPadImageTest itkWrapPadImageTest)
+ADD_EXECUTABLE(itkMirrorPadImageTest itkMirrorPadImageTest)
 ADD_EXECUTABLE(itkExtractImageTest itkExtractImageTest)
 ADD_EXECUTABLE(itkStreamingImageFilterTest itkStreamingImageFilterTest)
 ADD_EXECUTABLE(itkStreamingImageFilterTest2 itkStreamingImageFilterTest2)
