ENH: Test for itkMapContainer added

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -23,6 +23,7 @@ ADD_TEST(itkImageLinearIteratorTest itkImageLinearIteratorTest)
 ADD_TEST(itkImageSliceIteratorTest itkImageSliceIteratorTest)
 ADD_TEST(itkIteratorTests itkIteratorTests)
 ADD_TEST(itkMatrixTest itkMatrixTest)
+ADD_TEST(itkMapContainerTest itkMapContainerTest)
 ADD_TEST(itkMemoryLeakTest itkMemoryLeakTest)
 ADD_TEST(itkMeshTest itkMeshTest)
 ADD_TEST(itkMeshFstreamTest itkMeshFstreamTest)
@@ -72,6 +73,7 @@ ADD_EXECUTABLE(itkImageLinearIteratorTest itkImageLinearIteratorTest)
 ADD_EXECUTABLE(itkImageSliceIteratorTest itkImageSliceIteratorTest)
 ADD_EXECUTABLE(itkIteratorTests itkIteratorTests)
 ADD_EXECUTABLE(itkMatrixTest itkMatrixTest)
+ADD_EXECUTABLE(itkMapContainerTest itkMapContainerTest)
 ADD_EXECUTABLE(itkMemoryLeakTest itkMemoryLeakTest)
 ADD_EXECUTABLE(itkMeshTest itkMeshTest)
 ADD_EXECUTABLE(itkMeshFstreamTest itkMeshFstreamTest)
