--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -16,6 +16,7 @@ ADD_TEST(itkAsinImageFilterAndAdaptorTest itkAsinImageFilterAndAdaptorTest)
 ADD_TEST(itkAcosImageFilterAndAdaptorTest itkAcosImageFilterAndAdaptorTest)
 ADD_TEST(itkAtanImageFilterAndAdaptorTest itkAtanImageFilterAndAdaptorTest)
 ADD_TEST(itkAdaptImageFilterTest itkAdaptImageFilterTest)
+ADD_TEST(itkAdaptImageFilterTest2 itkAdaptImageFilterTest2)
 ADD_TEST(itkBasicArchitectureTest itkBasicArchitectureTest)
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBinaryMagnitudeImageFilterTest)
 ADD_TEST(itkBloxBoundaryPointImageTest itkBloxBoundaryPointImageTest)
@@ -70,6 +71,7 @@ ADD_EXECUTABLE(itkAsinImageFilterAndAdaptorTest itkAsinImageFilterAndAdaptorTest
 ADD_EXECUTABLE(itkAcosImageFilterAndAdaptorTest itkAcosImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkAtanImageFilterAndAdaptorTest itkAtanImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkAdaptImageFilterTest itkAdaptImageFilterTest)
+ADD_EXECUTABLE(itkAdaptImageFilterTest2 itkAdaptImageFilterTest2)
 ADD_EXECUTABLE(itkBasicArchitectureTest itkBasicArchitectureTest)
 ADD_EXECUTABLE(itkBinaryMagnitudeImageFilterTest itkBinaryMagnitudeImageFilterTest)
 ADD_EXECUTABLE(itkBloxBoundaryPointImageTest itkBloxBoundaryPointImageTest)
@@ -109,6 +111,7 @@ ADD_EXECUTABLE(itkTanImageFilterAndAdaptorTest itkTanImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkTernaryMagnitudeImageFilterTest itkTernaryMagnitudeImageFilterTest)
 ADD_EXECUTABLE(itkThresholdImageFilterTest itkThresholdImageFilterTest)
 ADD_EXECUTABLE(itkTransformMeshFilterTest itkTransformMeshFilterTest)
+ADD_EXECUTABLE(itkTwoOutputExampleImageFilterTest itkTwoOutputExampleImageFilterTest)
 ADD_EXECUTABLE(itkVectorAnisotropicDiffusionImageFilterTest itkVectorAnisotropicDiffusionImageFilterTest)
 ADD_EXECUTABLE(itkGradientAnisotropicDiffusionImageFilterTest itkGradientAnisotropicDiffusionImageFilterTest)
 ADD_EXECUTABLE(itkGradientMagnitudeImageFilterTest itkGradientMagnitudeImageFilterTest)
