ERR: Added VOL IO.

--- a/Code/IO/CMakeLists.txt
+++ b/Code/IO/CMakeLists.txt
@@ -6,6 +6,8 @@ itkImageIOBase
 itkImageIOFactory
 itkPNGImageIOFactory
 itkPNGImageIO
+itkVOLImageIOFactory
+itkVOLImageIO
 )
 
 # Add ITKIO library
