First checkin of JoinImageFilterTest

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -37,6 +37,7 @@ ADD_TEST(itkBasicFiltersHeaderTest itkBasicFiltersHeaderTest)
 ADD_TEST(itkImageAdaptorNthElementTest itkImageAdaptorNthElementTest)
 ADD_TEST(itkImageAdaptorPipeLineTest itkImageAdaptorPipeLineTest)
 ADD_TEST(itkImportImageTest itkImportImageTest)
+ADD_TEST(itkJoinImageFilerTest itkJoinImageFilterTest)
 ADD_TEST(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_TEST(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
 ADD_TEST(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
@@ -92,6 +93,7 @@ ADD_EXECUTABLE(itkBasicFiltersHeaderTest itkBasicFiltersHeaderTest)
 ADD_EXECUTABLE(itkImageAdaptorNthElementTest itkImageAdaptorNthElementTest)
 ADD_EXECUTABLE(itkImageAdaptorPipeLineTest itkImageAdaptorPipeLineTest)
 ADD_EXECUTABLE(itkImportImageTest itkImportImageTest)
+ADD_EXECUTABLE(itkJoinImageFilterTest itkJoinImageFilterTest)
 ADD_EXECUTABLE(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
