ENH: added tests for new PDE-based deformable registration classes.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -14,6 +14,7 @@ ITKCommon
 VXLNumerics
 )
 ADD_TEST(itkCurvatureFlowTest itkCurvatureFlowTest)
+ADD_TEST(itkDemonsRegistrationFilterTest itkDemonsRegistrationFilterTest)
 ADD_TEST(itkExtractMeshConnectedRegionsTest itkExtractMeshConnectedRegionsTest)
 ADD_TEST(itkFastMarchingTest itkFastMarchingTest)
 ADD_TEST(itkGeodesicActiveContoursTest itkGeodesicActiveContoursTest)
@@ -37,6 +38,7 @@ ADD_TEST(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
 ADD_TEST(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
 ADD_TEST(itkMRFLabellerTest itkMRFLabellerTest)
 ADD_TEST(itkMultiResolutionImagePyramidTest itkMultiResolutionImagePyramidTest)
+ADD_TEST(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
 ADD_TEST(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 ADD_TEST(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_TEST(itkMutualInformationMetricTest itkMutualInformationMetricTest)
@@ -58,6 +60,7 @@ ADD_TEST(itkVoronoiSegmentationImageFilterTest itkVoronoiSegmentationImageFilter
 ADD_TEST(itkWatershedImageFilterTest itkWatershedImageFilterTest)
 
 ADD_EXECUTABLE(itkCurvatureFlowTest itkCurvatureFlowTest)
+ADD_EXECUTABLE(itkDemonsRegistrationFilterTest itkDemonsRegistrationFilterTest)
 ADD_EXECUTABLE(itkExtractMeshConnectedRegionsTest itkExtractMeshConnectedRegionsTest)
 ADD_EXECUTABLE(itkFastMarchingTest itkFastMarchingTest)
 ADD_EXECUTABLE(itkGeodesicActiveContoursTest itkGeodesicActiveContoursTest)
@@ -88,6 +91,7 @@ ADD_EXECUTABLE(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
 ADD_EXECUTABLE(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
 ADD_EXECUTABLE(itkMRFLabellerTest itkMRFLabellerTest)
 ADD_EXECUTABLE(itkMultiResolutionImagePyramidTest itkMultiResolutionImagePyramidTest)
+ADD_EXECUTABLE(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
 ADD_EXECUTABLE(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 ADD_EXECUTABLE(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_EXECUTABLE(itkMutualInformationMetricTest itkMutualInformationMetricTest)
