ENH: ImageToParametricSpaceFilterTest added

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -36,6 +36,7 @@ ADD_TEST(itkFloodFillIteratorTest itkFloodFillIteratorTest)
 ADD_TEST(itkBasicFiltersHeaderTest itkBasicFiltersHeaderTest)
 ADD_TEST(itkImageAdaptorNthElementTest itkImageAdaptorNthElementTest)
 ADD_TEST(itkImageAdaptorPipeLineTest itkImageAdaptorPipeLineTest)
+ADD_TEST(itkImageToParametricSpaceFilterTest itkImageToParametricSpaceFilterTest)
 ADD_TEST(itkImportImageTest itkImportImageTest)
 ADD_TEST(itkJoinImageFilerTest itkJoinImageFilterTest)
 ADD_TEST(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
@@ -92,6 +93,7 @@ ADD_EXECUTABLE(itkFloodFillIteratorTest itkFloodFillIteratorTest)
 ADD_EXECUTABLE(itkBasicFiltersHeaderTest itkBasicFiltersHeaderTest)
 ADD_EXECUTABLE(itkImageAdaptorNthElementTest itkImageAdaptorNthElementTest)
 ADD_EXECUTABLE(itkImageAdaptorPipeLineTest itkImageAdaptorPipeLineTest)
+ADD_EXECUTABLE(itkImageToParametricSpaceFilterTest itkImageToParametricSpaceFilterTest)
 ADD_EXECUTABLE(itkImportImageTest itkImportImageTest)
 ADD_EXECUTABLE(itkJoinImageFilterTest itkJoinImageFilterTest)
 ADD_EXECUTABLE(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
