First checking of a test for the GradientImageFilter

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -61,6 +61,7 @@ ADD_TEST(itkTransformMeshFilterTest itkTransformMeshFilterTest)
 ADD_TEST(itkVectorAnisotropicDiffusionImageFilterTest itkVectorAnisotropicDiffusionImageFilterTest)
 ADD_TEST(itkGradientAnisotropicDiffusionImageFilterTest itkGradientAnisotropicDiffusionImageFilterTest)
 ADD_TEST(itkGradientMagnitudeImageFilterTest itkGradientMagnitudeImageFilterTest)
+ADD_TEST(itkGradientImageFilterTest itkGradientImageFilterTest)
 ADD_TEST(itkGradientRecursiveGaussianFilterTest itkGradientRecursiveGaussianFilterTest)
 ADD_TEST(itkNeighborhoodOperatorImageFilterTest itkNeighborhoodOperatorImageFilterTest)
 ADD_TEST(itkVectorNeighborhoodOperatorImageFilterTest itkVectorNeighborhoodOperatorImageFilterTest)
@@ -119,6 +120,7 @@ ADD_EXECUTABLE(itkTwoOutputExampleImageFilterTest itkTwoOutputExampleImageFilter
 ADD_EXECUTABLE(itkVectorAnisotropicDiffusionImageFilterTest itkVectorAnisotropicDiffusionImageFilterTest)
 ADD_EXECUTABLE(itkGradientAnisotropicDiffusionImageFilterTest itkGradientAnisotropicDiffusionImageFilterTest)
 ADD_EXECUTABLE(itkGradientMagnitudeImageFilterTest itkGradientMagnitudeImageFilterTest)
+ADD_EXECUTABLE(itkGradientImageFilterTest itkGradientImageFilterTest)
 ADD_EXECUTABLE(itkGradientRecursiveGaussianFilterTest itkGradientRecursiveGaussianFilterTest)
 ADD_EXECUTABLE(itkNeighborhoodOperatorImageFilterTest itkNeighborhoodOperatorImageFilterTest)
 ADD_EXECUTABLE(itkVectorNeighborhoodOperatorImageFilterTest itkVectorNeighborhoodOperatorImageFilterTest)
