ENH: support for VOL files added

--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -11,6 +11,7 @@ LINK_DIRECTORIES(${ITK_BINARY_DIR}/Code/IO)
 ADD_EXECUTABLE(itkTestConvertBuffer itkTestConvertBuffer)
 ADD_EXECUTABLE(itkTestLoadPNG itkTestLoadPNG)
 ADD_EXECUTABLE(itkTestLoadMeta itkTestLoadMeta)
+ADD_EXECUTABLE(itkTestLoadVOL itkTestLoadVOL)
 #ADD_EXECUTABLE(itkTestRawImageIO itkTestRawImageIO)
 
 
