ENH: Test for itk::RT3DTransform added

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -36,6 +36,7 @@ ADD_TEST(itkPointSetTest itkPointSetTest)
 ADD_TEST(itkRandomAccessNeighborhoodIteratorTest itkRandomAccessNeighborhoodIteratorTest)
 ADD_TEST(itkRigid3DTransformTest itkRigid3DTransformTest)
 ADD_TEST(itkRigid3DPerspectiveTransformTest itkRigid3DPerspectiveTransformTest)
+ADD_TEST(itkRT3DTransformTest itkRT3DTransformTest)
 ADD_TEST(itkSliceIteratorTest itkSliceIteratorTest)
 ADD_TEST(itkSpatialFunctionTest itkSpatialFunctionTest)
 ADD_TEST(itkSmartPointerTest itkSmartPointerTest)
@@ -85,6 +86,7 @@ ADD_EXECUTABLE(itkPointGeometryTest itkPointGeometryTest)
 ADD_EXECUTABLE(itkPointSetTest itkPointSetTest)
 ADD_EXECUTABLE(itkRigid3DTransformTest itkRigid3DTransformTest)
 ADD_EXECUTABLE(itkRigid3DPerspectiveTransformTest itkRigid3DPerspectiveTransformTest)
+ADD_EXECUTABLE(itkRT3DTransformTest itkRT3DTransformTest)
 ADD_EXECUTABLE(itkRandomAccessNeighborhoodIteratorTest itkRandomAccessNeighborhoodIteratorTest)
 ADD_EXECUTABLE(itkScaleTransformTest itkScaleTransformTest)
 ADD_EXECUTABLE(itkSliceIteratorTest itkSliceIteratorTest)
