--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -34,6 +34,7 @@ ADD_TEST(itkPixelAccessTest itkPixelAccessTest)
 ADD_TEST(itkPointGeometryTest itkPointGeometryTest)
 ADD_TEST(itkPointSetTest itkPointSetTest)
 ADD_TEST(itkRandomAccessNeighborhoodIteratorTest itkRandomAccessNeighborhoodIteratorTest)
+ADD_TEST(itkRGBPixelTest itkRGBPixelTest)
 ADD_TEST(itkRigid3DTransformTest itkRigid3DTransformTest)
 ADD_TEST(itkRigid3DPerspectiveTransformTest itkRigid3DPerspectiveTransformTest)
 ADD_TEST(itkRT3DTransformTest itkRT3DTransformTest)
@@ -88,6 +89,7 @@ ADD_EXECUTABLE(itkRigid3DTransformTest itkRigid3DTransformTest)
 ADD_EXECUTABLE(itkRigid3DPerspectiveTransformTest itkRigid3DPerspectiveTransformTest)
 ADD_EXECUTABLE(itkRT3DTransformTest itkRT3DTransformTest)
 ADD_EXECUTABLE(itkRandomAccessNeighborhoodIteratorTest itkRandomAccessNeighborhoodIteratorTest)
+ADD_EXECUTABLE(itkRGBPixelTest itkRGBPixelTest)
 ADD_EXECUTABLE(itkScaleTransformTest itkScaleTransformTest)
 ADD_EXECUTABLE(itkSliceIteratorTest itkSliceIteratorTest)
 ADD_EXECUTABLE(itkSmartNeighborhoodIteratorTest itkSmartNeighborhoodIteratorTest)
