ENH: ReflectImageFilterTest added.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -42,6 +42,7 @@ ADD_TEST(itkJoinImageFilerTest itkJoinImageFilterTest)
 ADD_TEST(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_TEST(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
 ADD_TEST(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
+ADD_TEST(itkReflectImageFilterTest itkReflectImageFilterTest)
 ADD_TEST(itkResampleImageTest itkResampleImageTest)
 ADD_TEST(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest)
 ADD_TEST(itkShrinkImageTest itkShrinkImageTest)
@@ -100,6 +101,7 @@ ADD_EXECUTABLE(itkJoinImageFilterTest itkJoinImageFilterTest)
 ADD_EXECUTABLE(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
+ADD_EXECUTABLE(itkReflectImageFilterTest itkReflectImageFilterTest)
 ADD_EXECUTABLE(itkResampleImageTest itkResampleImageTest )
 ADD_EXECUTABLE(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest )
 ADD_EXECUTABLE(itkShrinkImageTest itkShrinkImageTest)
