ENH: InteriorExteriorMeshFilter added.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -38,6 +38,7 @@ ADD_TEST(itkImageAdaptorNthElementTest itkImageAdaptorNthElementTest)
 ADD_TEST(itkImageAdaptorPipeLineTest itkImageAdaptorPipeLineTest)
 ADD_TEST(itkImageToParametricSpaceFilterTest itkImageToParametricSpaceFilterTest)
 ADD_TEST(itkImportImageTest itkImportImageTest)
+ADD_TEST(itkInteriorExteriorMeshFilter itkInteriorExteriorMeshFilter )
 ADD_TEST(itkJoinImageFilerTest itkJoinImageFilterTest)
 ADD_TEST(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_TEST(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
@@ -97,6 +98,7 @@ ADD_EXECUTABLE(itkImageAdaptorNthElementTest itkImageAdaptorNthElementTest)
 ADD_EXECUTABLE(itkImageAdaptorPipeLineTest itkImageAdaptorPipeLineTest)
 ADD_EXECUTABLE(itkImageToParametricSpaceFilterTest itkImageToParametricSpaceFilterTest)
 ADD_EXECUTABLE(itkImportImageTest itkImportImageTest)
+ADD_EXECUTABLE(itkInteriorExteriorMeshFilter itkInteriorExteriorMeshFilter )
 ADD_EXECUTABLE(itkJoinImageFilterTest itkJoinImageFilterTest)
 ADD_EXECUTABLE(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
