ENH: itkEventObject added

--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -4,6 +4,7 @@ itkCommand
 itkDataObject 
 itkDirectory 
 itkDynamicLoader 
+itkEventObject 
 itkExceptionObject 
 itkFastMutexLock 
 itkFileOutputWindow
