MOD: file reflects renaming of itkRT3DTranformTest to itkAzimuthElevationToCartesianTransformTest

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -5,6 +5,7 @@ ITKCommon
 ADD_TEST(itkAdaptorComparisonTest itkAdaptorComparisonTest)
 ADD_TEST(itkAffineTransformTest itkAffineTransformTest)
 ADD_TEST(itkArrayTest itkArrayTest)
+ADD_TEST(itkAzimuthElevationToCartesianTransformTest itkAzimuthElevationToCartesianTransformTest)
 ADD_TEST(itkBoundingBoxTest itkBoundingBoxTest)
 ADD_TEST(itkByteSwapTest itkByteSwapTest)
 ADD_TEST(itkConstNeighborhoodIteratorTest itkConstNeighborhoodIteratorTest)
@@ -37,7 +38,6 @@ ADD_TEST(itkRandomAccessNeighborhoodIteratorTest itkRandomAccessNeighborhoodIter
 ADD_TEST(itkRGBPixelTest itkRGBPixelTest)
 ADD_TEST(itkRigid3DTransformTest itkRigid3DTransformTest)
 ADD_TEST(itkRigid3DPerspectiveTransformTest itkRigid3DPerspectiveTransformTest)
-ADD_TEST(itkRT3DTransformTest itkRT3DTransformTest)
 ADD_TEST(itkSliceIteratorTest itkSliceIteratorTest)
 ADD_TEST(itkSpatialFunctionTest itkSpatialFunctionTest)
 ADD_TEST(itkSmartPointerTest itkSmartPointerTest)
@@ -57,6 +57,7 @@ ADD_TEST(itkSymmetricEllipsoidInteriorExteriorSpatialFunctionTest itkSymmetricEl
 ADD_EXECUTABLE(itkAdaptorComparisonTest itkAdaptorComparisonTest)
 ADD_EXECUTABLE(itkAffineTransformTest itkAffineTransformTest)
 ADD_EXECUTABLE(itkArrayTest itkArrayTest)
+ADD_EXECUTABLE(itkAzimuthElevationToCartesianTransformTest itkAzimuthElevationToCartesianTransformTest)
 ADD_EXECUTABLE(itkBoundingBoxTest itkBoundingBoxTest)
 ADD_EXECUTABLE(itkByteSwapTest itkByteSwapTest)
 ADD_EXECUTABLE(itkConstNeighborhoodIteratorTest itkConstNeighborhoodIteratorTest)
@@ -87,7 +88,6 @@ ADD_EXECUTABLE(itkPointGeometryTest itkPointGeometryTest)
 ADD_EXECUTABLE(itkPointSetTest itkPointSetTest)
 ADD_EXECUTABLE(itkRigid3DTransformTest itkRigid3DTransformTest)
 ADD_EXECUTABLE(itkRigid3DPerspectiveTransformTest itkRigid3DPerspectiveTransformTest)
-ADD_EXECUTABLE(itkRT3DTransformTest itkRT3DTransformTest)
 ADD_EXECUTABLE(itkRandomAccessNeighborhoodIteratorTest itkRandomAccessNeighborhoodIteratorTest)
 ADD_EXECUTABLE(itkRGBPixelTest itkRGBPixelTest)
 ADD_EXECUTABLE(itkScaleTransformTest itkScaleTransformTest)
