ERR: need to define _PTHREADS to have a thread safe stl.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,3 +89,6 @@ IF(ITK_WRAP_TCL)
   SUBDIR_DEPENDS(Wrapping Code)
 ENDIF(ITK_WRAP_TCL)
 
+IF(CMAKE_USE_PTHREADS)
+    ADD_DEFINITIONS(-D_PTHREADS)
+ENDIF(CMAKE_USE_PTHREADS)
