--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -42,6 +42,7 @@ ADD_TEST(itkSliceIteratorTest itkSliceIteratorTest)
 ADD_TEST(itkSpatialFunctionTest itkSpatialFunctionTest)
 ADD_TEST(itkSmartPointerTest itkSmartPointerTest)
 ADD_TEST(itkTransformTest itkTransformTest)
+ADD_TEST(itkThreadDefsTest itkThreadDefsTest)
 ADD_TEST(itkTranslationTransformTest itkTranslationTransformTest)
 ADD_TEST(itkVectorGeometryTest itkVectorGeometryTest)
 ADD_TEST(itkVersorTest itkVersorTest)
@@ -96,6 +97,7 @@ ADD_EXECUTABLE(itkSmartNeighborhoodIteratorTest itkSmartNeighborhoodIteratorTest
 ADD_EXECUTABLE(itkSmartPointerTest itkSmartPointerTest)
 ADD_EXECUTABLE(itkSpatialFunctionTest itkSpatialFunctionTest)
 ADD_EXECUTABLE(itkSplineKernelTransformTest itkSplineKernelTransformTest)
+ADD_EXECUTABLE(itkThreadDefsTest itkThreadDefsTest)
 ADD_EXECUTABLE(itkTransformTest itkTransformTest)
 ADD_EXECUTABLE(itkTranslationTransformTest itkTranslationTransformTest)
 ADD_EXECUTABLE(itkVectorGeometryTest itkVectorGeometryTest)
