ERR: zlib->vtkzlib, png->vtkpng.

--- a/Code/IO/CMakeLists.txt
+++ b/Code/IO/CMakeLists.txt
@@ -14,7 +14,7 @@ itkVOLImageIO
 
 # Add ITKIO library
 ADD_LIBRARY(ITKIO ITKIO_SRCS)
-TARGET_LINK_LIBRARIES(ITKIO ITKCommon png zlib)
+TARGET_LINK_LIBRARIES(ITKIO ITKCommon vtkpng vtkzlib)
 
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/png)
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/zlib)
