--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -2,7 +2,7 @@ INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Code/IO)
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Utilities/zlib)
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Utilities/png)
 
-LINK_LIBRARIES(ITKIO ITKCommon png zlib)
+LINK_LIBRARIES(ITKIO ITKCommon vtkpng vtkzlib)
 
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/png)
 LINK_DIRECTORIES(${ITK_BINARY_DIR}/Utilities/zlib)
